通过login熟悉对post流程认识

--- a/polls/templates/polls/index.html
+++ b/polls/templates/polls/index.html
@@ -5,8 +5,8 @@
     <title>Index</title>
 
     <!--加载静态文件-->
-    {% load static %}
-    <link rel="stylesheet" type="text/css" href="{% static 'polls/style.css' %}" />
+    <!--{% load static %}-->
+    <!--<link rel="stylesheet" type="text/css" href="{% static 'polls/style.css' %}" />-->
 </head>
 <body>
     {% if latest_question_list %}
@@ -19,5 +19,8 @@
     {% else %}
         <p>No polls are available.</p>
     {% endif %}
+    <br>
+    <p><a href="{% url 'polls:login'%}">Sign up</a></p>
+    <p><a href="{% url 'polls:js'%}">JS</a></p>
 </body>
 </html>
